tests/diagnostics_golden/diag_anonymous_access_reassign_join.txt
Diagnostics Golden: Anonymous Access Reassign Join
Source: tests/negative/neg_own_anon_reassign_join.safe

Expected diagnostic output:
------------------------------------------------------------------------
neg_own_anon_reassign_join.safe:22:7: error: anonymous access 'ref' may only be assigned at its declaration
  |
  | 22 |       ref = other;  -- ERROR: merge must not reset init-only tracking
  |    |       ^~~~~~~~~~~~
  |
  note: borrow and observe locals are initialization-only.
  note: rule: Safe §2.3.3 / §2.3.4a (anonymous access is initialization-only)
------------------------------------------------------------------------
